# ewpratten.com

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  404.html  404.md  CNAME  CODEOWNERS  Cargo.toml  DOCKERFILE  DeepSpace.md  Gemfile  LICENSE  Makefile  README.md  _config.yml  _headers  _redirects  _routes.json  about.html  about.md  b.sh  blog.html  blog.md  categories.html  config.toml  devmon.html  discord.html  docker-compose.yml  donations.md  downloads.md  error.html  events.md  feed.json  forty_jekyll_theme.gemspec  fossl-feeds.md  global.css  humans.txt  index.html  (+37 more)
.devcontainer/: devcontainer.json
Backup/: README.md  about-mobile.html  card.html  projectzero.html  widgets.js
_data/: downloads.json  events.json  papers.json  photos.json  projects.json  socials.json  work_experience.json  work_skills.json
_drafts/: 2019-05-27-Building-Safe-Vision-Comms.md  2019-08-13-Learning-hiragana.md  2019-08-25-Crypto-my-thoughts.md  2019-09-09-fstrings.md  2019-09-19-I-want-to-build-a-sat.md  2019-09-28-Offseason1.md  2019-11-09-easyshell.md  2019-12-2-FRC2020PreseasonNotes.md  2020-01-07-RobotSimGUI.md  2020-01-14-Printer-Tunneling.md  2020-01-14-ZEBRA-Darts.md  2020-02-25-Dead-Reckon.md  2020-03-01-Corona-src.md  2020-04-05-Learn-To-Drive.md  2020-04-18-OBS-UDP-Streaming.md  2020-04-20-LudumDare46.md  2020-04-28-How-i-hacked-together-vr.md  2020-05-29-VSBRO.md  (+37 more)
_notes/: index.md  (+1 more)
sites/cursed.graphics/: .gitignore  Cargo.toml  wrangler.toml
sites/cursed.graphics/src/: lib.rs
sites/cursed.graphics/templates/: image.html  index.html
(+1392 files in other folders)
