[package]
name = "cursed-graphics"
publish = false
edition = "2021"

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
worker = "0.4.2"
worker-macros = "0.4.2"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
base64 = "0.22.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]
